<resources>
    <string name="app_name">MrL</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="wp_header">语音唤醒识别</string>
    <string name="tts_header">语音合成</string>
    <string name="other_header">其他</string>

    <!-- wp Preferences -->
    <string name="name_title">名字</string>
    <string name="speaker_title">人声模板</string>
    <string name="volume_title">说话音量</string>
    <string name="speed_title">说话语速</string>
    <string name="pitch_title">说话语调</string>

    <string name="name_value">小O小O</string>
    <string name="speaker_value">普通女声(默认)</string>
    <string name="volume_value">7(默认)</string>
    <string name="speed_value">7(默认)</string>
    <string name="pitch_value">7(默认)</string>



    <!-- tts Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>