<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/wp_header">

        <EditTextPreference
            app:defaultValue="小O"
            app:key="name"
            app:title="@string/name_title"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/tts_header">

        <ListPreference
            app:defaultValue="@string/voice_value"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="voice"
            app:title="@string/voice_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="switch"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"

            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">


        <RingtonePreference
            android:defaultValue="123"
            android:key="ringtone_preference_1"
            android:title="Ringtone preference" />
    </PreferenceCategory>

</PreferenceScreen>